// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error component Error with error and dismiss button 1`] = `
.c3 {
  margin-left: auto;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  vertical-align: middle;
  cursor: inherit;
  color: #000;
}

.c0 {
  padding: 1em 1em 1em 1em;
  height: auto;
  color: #000;
  background-color: #fcc;
  padding: 1em 1em 1em 1em;
  height: auto;
  border: 1px solid #c00;
  border-radius: 0.5em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  cursor: inherit;
  font-size: 14px;
  color: #c00;
  white-space: pre;
}

<div
  className="c0"
  color="black"
  height="auto"
>
  <div
    className="c1"
  >
    <div>
      <div
        className="sc-fznyAO c2"
        color="red"
        cursor="inherit"
        fontSize={1}
      >
        This is an error
      </div>
    </div>
    <div
      className="c3"
    >
      <svg
        className="c4"
        clipRule="evenodd"
        color="black"
        cursor="inherit"
        fill="currentcolor"
        fillRule="evenodd"
        height="1em"
        onClick={[Function]}
        viewBox="0 0 25 24"
        width="1em"
      >
        <path
          d="M24.002 2.001L22 .001 12 9.6l-10-9.6-2 2 9.6 10L.001 22l2 2 10-9.6 10 9.6 2-2-9.6-10 9.6-9.999z"
          fillRule="nonzero"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Error component Error with error and no dismiss button 1`] = `
.c0 {
  padding: 1em 1em 1em 1em;
  height: auto;
  color: #000;
  background-color: #fcc;
  padding: 1em 1em 1em 1em;
  height: auto;
  border: 1px solid #c00;
  border-radius: 0.5em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  cursor: inherit;
  font-size: 14px;
  color: #c00;
  white-space: pre;
}

<div
  className="sc-AxjAm c0"
  color="black"
  height="auto"
>
  <div
    className="c1"
  >
    <div>
      <div
        className="sc-fznyAO c2"
        color="red"
        cursor="inherit"
        fontSize={1}
      >
        This is an error
      </div>
    </div>
  </div>
</div>
`;

exports[`Error component Error without error and no dismiss button 1`] = `null`;
